--- a/_includes/style.sass
+++ b/_includes/style.sass
@@ -22,7 +22,7 @@ $line: 30
   -webkit-text-size-adjust: none
 
 body
-  font: #{$main/16}em / #{$line/$main} PT Serif, Cambria, Georgia, serif
+  font: #{$main/16}em / #{$line/$main} 
   @media screen and (max-width: 400px)
     font-size: .875em
 
@@ -37,7 +37,7 @@ img
   width: 100%
 
 .article, .nav ul
-  max-width: 30em
+  max-width: 60em
   +padding($main,0,0,1)
 
 h1, h2, hr, .date, .nav, .foot, .bg
