--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<!-- Post Header -->
+<!-- Post Header 
 <header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
     <div class="container">
         <div class="row">
@@ -17,7 +17,7 @@ layout: default
             </div>
         </div>
     </div>
-</header>
+</header>-->
 
 <!-- Post Content -->
 <article>
