--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+comments: true
 ---
 
 <!-- Post Header 
@@ -26,9 +27,12 @@ layout: default
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
 				{{ content }}
+              <hr>
+
+              {% include sharing.html %}
 
                 <hr>
-
+{% include comments.html %}
                 <ul class="pager">
                     {% if page.previous.url %}
                     <li class="previous">
