--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -10,6 +10,7 @@
   <script type="text/javascript">
   /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
   var disqus_shortname = 'juancarlosgpelaez';
+  var disqus_identifier = '{{ page.id }}'; 
   /* * * DON'T EDIT BELOW THIS LINE * * */
   (function() {
       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
