--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,7 @@
 			    {% for menu in site.data.navigation[page.lang] %}
 			      <li><a href="{{ menu[1].url }}">{{ menu[1].title }}</a></li>
 			    {% endfor %}
-			    <li class="lang">
+			    <li class="av navbar-nav navbar-right">
 			      {% assign posts=site.posts | where:"date", page.date | sort: 'path' %}
 			      {% for post in posts %}
 			        <a href="{{ post.url }}" class="{{ post.lang }}">{{ post.lang }}</a>
