--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,11 @@ comments: true
 <article>
     <div class="container">
         <div class="row">
+        	<div class="post-heading">
+        	<div class="meta date">{% include date.html date=page.date %}</div>
+        	</div>
+        </div>
+        <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
 				{{ content }}
