--- a/_includes/sharing.html
+++ b/_includes/sharing.html
@@ -9,7 +9,7 @@
 	
 		<!-- linkedin -->
 		<script src="https://platform.linkedin.com/in.js" type="text/javascript"> lang: {% if page.lang == 'es' %}es_ES{% else %} en_US {% endif %}</script>
-		<script type="IN/Share" data-url="{{site.url}}{{page.url}}" data-counter="top"></script>
+		<script type="IN/Share" data-url="{{site.url}}{{page.url}}" data-counter="right"></script>
 	    <!-- Google + -->
         <div class="g-plus" data-action="share" data-annotation="bubble"></div>
         <script src="https://apis.google.com/js/platform.js" async defer></script>
