--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,9 +1,14 @@
+  <script type="text/javascript">
+     
+  
+      console.log("log!!!...")
+
+  </script>
 {% if page.comments %}
   <!-- Add Disqus comments. -->
   <div id="disqus_thread"></div>
   <script type="text/javascript">
   /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-  //var disqus_shortname = '{{ disqus_shortname }}';
   var disqus_shortname = 'jgpelaezgithubio';
   var disqus_identifier = '{{ page.id }}'; 
   /* * * DON'T EDIT BELOW THIS LINE * * */
