--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,11 +53,16 @@
                     </li>
                     {% endif %}
                 </ul>
-                <p class="copyright text-muted">
-                	<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>
-                    {{ site.time | date: '%Y' }}</p>
+                <p class="">
+                	</p>
             </div>
         </div>
+    </div>
+    <div class="container license" style="font-size: 70%;">
+    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/" ><img alt="Creative Commons License" style="max-width: 100px;border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+    
+    <br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>
+                    {{ site.time | date: '%Y' }}
     </div>
 </footer>
 
