--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,3 +31,11 @@
     </div>
     <!-- /.container -->
 </nav>
+
+   <!-- BOTTOM RIGHT RIBBON: START COPYING HERE -->
+    <div class="github-fork-ribbon-wrapper right-bottom">
+        <div class="github-fork-ribbon">
+            <a href="https://github.com/jgpelaez/jgpelaez.github.io">Fork me on GitHub</a>
+        </div>
+    </div>
+    <!-- BOTTOM RIGHT RIBBON: END COPYING HERE -->
