--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,10 @@ layout: typo
         </div>
     </div>
 </header>
+<div class="container">
 
 {{ content }}
-
+</div>
 
 
 {% include footer.html %}
