--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+            <div class="nav navbar-nav navbar-brand" style="display: inline">
+            
+            	<a class="navbar-brand"  href="{{ site.baseurl }}/" style="display:inline ">
+            	<!-- <img height="50" width="50" src="/media/about/juancarlosgpelaez-sea.jpg"/> -->
+            	{{ site.title }}</a>
+            </div>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
