--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ comments: true
     <div class="container">
         <div class="row">
         	<div class="post-heading">
-        	<div class="meta date">{% include date.html date=page.date %}</div>
+        	<div class="meta date">{{ post.date }} {% include date-post.html date=page.date %}</div>
         	</div>
         </div>
         <div class="row">
