--- a/_includes/photo.html
+++ b/_includes/photo.html
@@ -2,9 +2,8 @@
 <div class="container">
 	<div class="row">
 		<div class="col-lg-12 text-center">
-			<img height="150" width="150" align="middle" src="/media/about/juancarlosgpelaez-sea-c1.png"/>
-			<h2></h2>
-			<hr class="star-light">
+			<div class="circular-jgpelaez"/>
+			
 		</div>
 	</div>
 </div>
