--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,11 @@ layout: typo
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <div class="site-heading">
-                    <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
+                	{% if page.post-type == 'page' %}
+                		<h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
+                	{% else %}
+                		<h2>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h2>
+                	{% endif %}
                     <hr class="small">
                     <span class="subheading">{{ page.description }}</span>
                 </div>
