--- a/css/jgpelaez.github.io.css
+++ b/css/jgpelaez.github.io.css
@@ -36,3 +36,15 @@ hr.star-primary:after {
     color: #{{ site.color.secondary }};
     background-color: #fff;
 }
+
+.circular-jgpelaez {
+	width: 150px;
+	height: 150px;
+	border-radius: 50%;
+	-webkit-border-radius: 150px;
+	-moz-border-radius: 150px;	
+	box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	background: url(../media/about/juancarlosgpelaez-sea-small.jpg) no-repeat;
+}
