--- a/_includes/date-post.html
+++ b/_includes/date-post.html
@@ -1,4 +1,4 @@
-{% if page.lang == 'es' %}Publicado por {% else %} published by {% endif %}
+{% if page.lang == 'es' %}Publicado por {% else %} Published by {% endif %}
 {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} 
 {% if page.lang == 'es' %} el {% else %} on {% endif %} 
 {% if include.mode != 'month' %}
